--- a/tambah-gurubk.html
+++ b/tambah-gurubk.html
@@ -62,7 +62,7 @@
             </tr>
             
             <tr>
-            <td><label>Foto Kue</label></td>
+            <td><label>Foto Guru</label></td>
             </tr>
             <tr>
                 <td><input type="file" name="foto_guru" required="required"></td>
