--- a/tambah-gurubk.html
+++ b/tambah-gurubk.html
@@ -74,6 +74,12 @@
             <tr>
                 <td><input class="input" type="text" name="profile_guru" required="required"></td>
             </tr>
+            <tr>
+                <td><label>Crisp</label></td>
+            </tr>
+            <tr>
+                <td><input class="input" type="text" name="crisp" required="required"></td>
+            </tr>
 
         </table>
         <input type="submit" name="simpan" value="SIMPAN" class="btn-simpan">
